--- a/views/Auth/login.ejs
+++ b/views/Auth/login.ejs
@@ -2,13 +2,36 @@
   <title>Login</title>
   
 </header>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Quantico&display=swap');
 
-<%- include('../layouts/navbar') %>
+.quantico-regular {
+    font-family: "Quantico", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+  .contentshadow {
+    box-shadow: 0 0 15px 5px #5c58b6;
+  }
+  .button {
+    color: #fff;
+    background-color: #5c58b6;
+    width: 150px;
+    border: solid 3px #ff4cbf;
+  }
+  .button:hover {
+    color: #38fbdb;
+    box-shadow: 0 0 10px 1px #ff4cbf;
+  }
+</style>
+<body class="quantico-regular" style="background-color: #122c5a; box-shadow: inset 0 0 15px 5px #ff4cbf;">
+
+<%- include('../layouts/navbar-viewer') %>
 <br><br><br><br>
-<div id = "content" class="container ">
-  <div class="card text shadow">
-      <div class="card-header text-center">
-        <h2>Login</h2>
+<div id="content" class="container" >
+  <div class="card text contentshadow">
+      <div class="card-header text-center" style="background-color: #5c58b6;">
+        <h2 style="color: #38fbdb;">Login</h2>
       </div>
       <div class="card-body">
         <form action="/auth/login" method="post" class="lg-form">
@@ -22,7 +45,7 @@
                 <input class="form-control" type="password" name="password" id="password" placeholder="Password"/>
               </div>
               <br>
-              <button input type="submit" value="Login" class="btn btn-secondary">Login</button>
+              <button style="background-color: #5c58b6;" input type="submit" value="Login" class="button">Login</button>
         </form>
       </div>
       <div class="card-footer text-muted">
