--- a/public/stylesheets/viewer.css
+++ b/public/stylesheets/viewer.css
@@ -17,8 +17,9 @@ body {
     position: absolute;
     z-index: 100;
     top: 35%;
-    right: 30%;
+    left: 55%;
     text-shadow: 0 0 10px #38fbdb;
+
 }
 .get-started-btn {
     margin-top: 25px;
