--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -25,7 +25,7 @@
             background-color: #f1f1f1;
             width: 250px;
         }
-        h1 {
+        h1,h3 {
             color: #ffffff;
         }
         table {
@@ -58,18 +58,20 @@
 <body class="quantico-regular" style="background-color: #122c5a;">
     <!-- Narbar-->
     <%- include('../layouts/navbar') %>
-
+    
     <!-- end of Narbar-->
 <!-- LEFT -->
     <main class="grid-container">
+        <br><br>
         <div id="content" class="container"> 
             <thead><br>
                 <div class="item1">
-                    <p>Programming 1</p> 
-                    <b>Class</b>
-                        <% if (Object.keys(result).length != 0) { %> :
-                            <%= result[0].ClassName %> 
-                            <br>
+                    <% if (Object.keys(result).length != 0) { %>
+                    <p>Course name : <%= result[0].ClassName %> </p>  
+                    <b>Class : <%= result[0].ClassName %> </b>
+                         
+                            
+                            <br><br>
                             <button type="button" class="btn btn-outline-dark btn-sm" data-bs-toggle="modal" data-bs-target="#Classjoin" style="background-color: #ffffff;">
                                 <svg width="17.5" height="20" style="font-size: 20px;;align-items: center;" viewBox="0 0 448 512">
                                 <path d="M432 256c0 17.69-14.33 32.01-32 32.01H256v144c0 17.69-14.33 31.99-32 31.99s-32-14.3-32-31.99v-144H48c-17.67 0-32-14.32-32-32.01s14.33-31.99 32-31.99H192v-144c0-17.69 14.33-32.01 32-32.01s32 14.32 32 32.01v144h144C417.7 224 432 238.3 432 256z"/>
@@ -85,7 +87,9 @@
                         <% } %>
                 </div>    
             </thead>
-        </div>     
+        </div>   
+        <br><br>  
+       
         <div id="content" class="container"> 
             <thead>
                 <div class="card ">
@@ -119,19 +123,19 @@
                                         <div class="col-6">
                                             <button onclick="window.location.href='/course-Operators_and_Expressions'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Operators and Expressions</button>
                                         </div>
-                                    <% }else if(RecommendaResult[0].RecommendCourse === "Selection Statement"){ %>
+                                    <% }else if(RecommendaResult[0].RecommendCourse === "Selection Statements"){ %>
                                         <div class="col-6">
-                                            <button onclick="window.location.href='/course-Selection_Statement'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Selection Statement</button>
+                                            <button onclick="window.location.href='/course-Selection_Statements'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Selection Statement</button>
                                         </div>
-                                    <% }else if(RecommendaResult[0].RecommendCourse === "Loop Statement"){ %>
+                                    <% }else if(RecommendaResult[0].RecommendCourse === "Loop Statements"){ %>
                                         <div class="col-6">
-                                            <button onclick="window.location.href='/course-Loop_Statement'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Loop Statement</button>
+                                            <button onclick="window.location.href='/course-Loop_Statements'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Loop Statement</button>
                                         </div>
-                                    <% }else if(RecommendaResult[0].RecommendCourse === "Array and String"){ %>
+                                    <% }else if(RecommendaResult[0].RecommendCourse === "Arrays and Strings"){ %>
                                         <div class="col-6">
-                                            <button onclick="window.location.href='/course-Array_and_String'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Array and String</button>
+                                            <button onclick="window.location.href='/course-Arrays_and_Strings'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Array and String</button>
                                         </div>
-                                    <% }else if(RecommendaResult[0].RecommendCourse === "Function"){ %>
+                                    <% }else if(RecommendaResult[0].RecommendCourse === "Functions"){ %>
                                         <div class="col-6">
                                             <button onclick="window.location.href='/course-Functions'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Function</button>
                                         </div>
@@ -141,7 +145,6 @@
                                         <div class="col-6">Next</div>
                                         
                                     <% } %>
-
                                     <div class="col-auto">
                                         <button type="button" class="btn btn-outline-dark btn-sm btn-block " data-bs-toggle="modal" data-bs-target="#RecommendSetting"><i class="fa fa-flag" style="font-size: 16px;;align-items: center;" ></i></button>
                                     </div>
@@ -159,16 +162,34 @@
                         
                     </div>	
             </thead>
-            
         </div>    
                 
-       
-        <br>
         
 
 
 <!-- MID -->
     <!-- SKILLS-->
+    <br>
+    <style>
+        .project {
+            width: 400px; 
+            height: 40px;
+            border-radius: 10px;
+        
+            background-color: #f1f1f1;
+        }
+    </style>
+        <div class="project" >
+            <div class="">
+                <% if (TicketBooking_SystemPercent >= 50) { %>
+                    <p>rdddd</p>
+                <% }%>
+            </div>    
+        </div>
+   
+
+    <br><br>
+
     <h1>Competency</h1>
     <div  class="group2">
         
@@ -326,7 +347,9 @@
                                 </div>
                             </div>
                         </div>
+                        
                         <div class="row">
+                            <!--
                             <div class="col">
                                 <b>เส้นทางตาม Project ที่ต้องการ</b>
                             </div>
@@ -341,7 +364,7 @@
                             </div>
                             <div class="col">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="RecommendationSetting" id="Point-Path" value="Library">
+                                    <input class="form-check-input" type="radio" name="RecommendationSetting" id="Point-Path" value="PointofSalesSystem-(Project_quiz2)">
                                     <label class="form-check-label" for="Point-Path">
                                     Point of Sales System
                                     </label>
@@ -350,12 +373,12 @@
                             <div class="w-100"></div>
                             <div class="col">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="RecommendationSetting" id="Ros-Path" value="Roshambo">
+                                    <input class="form-check-input" type="radio" name="RecommendationSetting" id="Ros-Path" value="ProjectQUIZ3">
                                     <label class="form-check-label" for="Ros-Path">
-                                    Roshambo
+                                    Project Quiz 3
                                     </label>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                     </div>   
                 </div>
