--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -60,7 +60,6 @@
             <div class="accordion" id="accordionParentSyntax">
                 <!--   Introduce -->
                 <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                    <br>
                     <h1>Lesson</h1>
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
@@ -163,7 +162,7 @@
                               </div>
                         </div>
                     </div>
-            <br></div>
+                </div>
             </div>
         </div>
     
