--- a/views/student/course/course_main.ejs
+++ b/views/student/course/course_main.ejs
@@ -16,7 +16,9 @@
             -moz-user-select: none;
             user-select: none;
         }
-
+        h1,h5 {
+            color: #fff;
+        }
         @media (min-width: 768px) {
             .bd-placeholder-img-lg { 
                 font-size: 3.5rem;
@@ -45,8 +47,7 @@
         <% } %>    
 
         
-        <!-- POSTTEST  
-        <% if (TicketBooking_SystemPercent === 1) { %><%- include('../layouts/post-test') %><% }%>-->
+      
 
         <!-- LESSON -->
         <%- include('../layouts/course-middle') %>
