--- a/views/student/layouts/recommendation.ejs
+++ b/views/student/layouts/recommendation.ejs
@@ -10,7 +10,7 @@
                 <div class="w-100"></div>
                 <div class="col">
                     <% if (Object.keys(RecommendaResult[0].RecommendCourse).length !== 0) { %>
-                        <h1>บทเรียนที่แนะนำ "<%= RecommendaResult[0].RecommendCourse %>"</h1>
+                        <h1 style="color: black;">บทเรียนที่แนะนำ "<%= RecommendaResult[0].RecommendCourse %>"</h1>
                     <% } else { %>
                     <% } %>
                     
