--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -67,11 +67,8 @@
             <thead><br>
                 <div class="item1" style="border-radius: 5px;">
                     <% if (Object.keys(result).length != 0) { %>
-                    <p>Course name : <%= result[0].ClassName %> </p>  <!-- ***** -->
-                    <b>Class : <%= result[0].ClassName %> </b>
-                         
-                            
-                            <br><br>
+                    <p>Course name : <%= result[0].ClassName %></p>  <!-- ***** -->
+                    <p>Class : <%= result[0].ClassName %> </p>
                             <button type="button" class="btn btn-outline-dark btn-sm" data-bs-toggle="modal" data-bs-target="#Classjoin" style="background-color: #ffffff;">
                                 <svg width="17.5" height="20" style="font-size: 20px;;align-items: center;" viewBox="0 0 448 512">
                                 <path d="M432 256c0 17.69-14.33 32.01-32 32.01H256v144c0 17.69-14.33 31.99-32 31.99s-32-14.3-32-31.99v-144H48c-17.67 0-32-14.32-32-32.01s14.33-31.99 32-31.99H192v-144c0-17.69 14.33-32.01 32-32.01s32 14.32 32 32.01v144h144C417.7 224 432 238.3 432 256z"/>
@@ -180,11 +177,12 @@
         }
     </style>
         <div class="project" >
-            <div class="">
-                <% if (TicketBooking_SystemPercent >= 50) { %>
-                    <p>Project</p>
-                <% }%>
-            </div>    
+            <% if (TicketBooking_SystemPercent >= 50) { %>
+                <p>Project</p>
+            <% }%>
+        </div>
+        <div style="background-color: #ffffff;">
+            <p></p>
         </div>
    
 
@@ -196,7 +194,7 @@
         <div>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.1.2/chart.umd.js"></script>
-            <h3>Pre-test</h3> 
+            <h3>***</h3> 
             <div style="height: 400px;" class="">
                 <div class="chartCard">
                     <div class="chartBox">
@@ -204,11 +202,20 @@
                         <script>
                             var marksCanvas = document.getElementById("marksChart");
                             var marksData = {
-                            labels: ['Knowledge', 'Tracing', 'Explaining','Writing'],
+                            labels: ['Knowledge', 'Tracing', 'Explaining'],
                             datasets: [{
-                                label: "Student A",
-                                backgroundColor: "rgba(200,0,0,0.2)",
-                                data: [<%= PreBasicPercent %>, <%= PreTracePercent %>, <%= PreExplainPercent %>, <%= PreWritePercent %>]
+                                data: [<%= PreBasicPercent %>, <%= PreTracePercent %>, <%= PreExplainPercent %>],
+                                label: "Pre-test",
+                                borderColor: [
+                                '#11a1c1'
+                                ]
+                            },
+                            {
+                                data: [<%= BasicPercent %>, <%= TracePercent %>, <%= ExplainPercent %>],
+                                label: "Post-test",
+                                borderColor: [
+                                '#ffc107'
+                                ]
                             }]
                             };
                             var radarChart = new Chart(marksCanvas, {
@@ -224,7 +231,7 @@
 
         <div>
         
-                <h3>Post-test</h3>   
+                <h3>***</h3>   
                 <div style="height: 400px;" class="">
                     <div class="chartCard">
                         <div class="chartBox">
@@ -237,7 +244,7 @@
                 const data = {
                   labels: ['Knowledge', 'Tracing', 'Explaining','Writing'],
                   datasets: [{
-                    data: [<%= PreBasicPercent %>, <%= PreTracePercent %>, <%= PreExplainPercent %>, <%= PreWritePercent %>],
+                    data: [<%= PreBasicPercent %>, <%= PreTracePercent %>, <%= PreExplainPercent %>, 100],
                     label: "Pre-test",
                     borderColor: [
                       '#11a1c1'
