--- a/views/student/layouts/project-list.ejs
+++ b/views/student/layouts/project-list.ejs
@@ -12,7 +12,7 @@
                             
                     <% } else{ %>  
                         
-                        <% if(RecommendaResult[0].TicketBooking_SystemPercent === 100) { %> <%# Follow node %> 
+                        <% if(RecommendaResult[0].TicketBooking_SystemPercent === 50) { %> <%# Follow node %> 
                         <!-- Project A -->   
                         <li class="mb-1">
                             <li><a href="/project-Ticket_Booking_System" class="btn  align-items-center rounded collapsed fs-6 fw-semibold"  type="button"  >
@@ -20,7 +20,7 @@
                             </a></li>
                         </li>
                         <% } %>
-                        <% if(RecommendaResult[0].PointofSales_SystemPercent === 100) { %> <%# Follow node %> 
+                        <% if(RecommendaResult[0].PointofSales_SystemPercent === 75) { %> <%# Follow node %> 
                         <!-- Project B -->   
                         <li class="mb-1">
                             <li><a href="/project-Point_of_Sales_System" class="btn  align-items-center rounded collapsed fs-6 fw-semibold"  type="button"  >
@@ -28,11 +28,11 @@
                             </a></li>
                         </li>
                         <% } %>
-                        <% if(RecommendaResult[0].RoshamboPercent === 100) { %> <%# Follow node %> 
+                        <% if(RecommendaResult[0].ProjectQUIZ3Percent === 100) { %> <%# Follow node %> 
                         <!-- Project C -->   
                         <li class="mb-1">
-                            <li><a href="/project-Roshambo" class="btn  align-items-center rounded collapsed fs-6 fw-semibold"  type="button"  >
-                                Roshambo 
+                            <li><a href="/project-Project_QUIZ3" class="btn  align-items-center rounded collapsed fs-6 fw-semibold"  type="button"  >
+                                Project Quiz 3 
                             </a></li>
                         </li>
                      
