--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -176,65 +176,63 @@
             padding: 10px;
         }
     </style>
+    <div  class="group">
         <div class="project">
+            <p>ความคืบหน้า</p>
+        </div>
+        <div class="project">
+            <img style="width: 20px;" src="https://cdn-icons-png.flaticon.com/512/4213/4213459.png " alt="">
             <% if (TicketBooking_SystemPercent === 50) { %>
-                <p>Project Quiz 1 ปลดล็อกแล้ว!</p>
+                <b>Project Quiz 1 ปลดล็อกแล้ว!</b>
                 <p>คลิก<a href="/project"> Project </a>เพื่อดูเพิ่มเติม</p>
             <% }%>
             <% if (PointofSales_SystemPercent === 75) { %>
-                <p>Project Quiz 2 ปลดล็อกแล้ว!</p>
+                <b>Project Quiz 2 ปลดล็อกแล้ว!</b>
                 <p>คลิก<a href="/project"> Project </a>เพื่อดูเพิ่มเติม</p>
             <% }%>
             <% if (ProjectQUIZ3Percent === 100) { %>
-                <p>Project Quiz 3 ปลดล็อกแล้ว!</p>
+                <b>Project Quiz 3 ปลดล็อกแล้ว!</b>
                 <p>คลิก<a href="/project"> Project </a>เพื่อดูเพิ่มเติม</p>
             <% }%>
         </div>
-        <div style="background-color: #ffffff;">
-            <p></p>
-        </div>
-   
+    </div>
 
     <br><br>
 
     <h1>Competency</h1>
     <div  class="group2">
-        <div>
-            <div id = "content" class="container">
-                <h1 id = 'content'><svg height="40" width="40" viewBox="0 0 576 512">
-                    <path d="M352.4 243.8l-49.83 99.5c-6.009 12-23.41 11.62-28.92-.625L216.7 216.3l-30.05 71.75L88.55 288l176.4 182.2c12.66 13.07 33.36 13.07 46.03 0l176.4-182.2l-112.1 .0052L352.4 243.8zM495.2 62.86c-54.36-46.98-137.5-38.5-187.5 13.06L288 96.25L268.3 75.92C218.3 24.36 135.2 15.88 80.81 62.86C23.37 112.5 16.84 197.6 60.18 256h105l35.93-86.25c5.508-12.88 23.66-13.12 29.54-.375l58.21 129.4l49.07-98c5.884-11.75 22.78-11.75 28.67 0l27.67 55.25h121.5C559.2 197.6 552.6 112.5 495.2 62.86z"/>
-                </svg> Skills </h1>   
-                <div class="box bg-light  mb-5 shadow" >
-                    <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
-                        <div class="row mb-3 ">
-                            <h5 for="inputEmail3" class="col-sm-2 col-form-label">Basic</h5>
-                            <div class="col-sm-10 " style="top:10px">
-                                <progress  max="100" value=<%= BasicPercent %>  class="html5 "></progress>
-                            </div>
+        <div id = "content" class="container">  
+            <div class="box bg-light  mb-5 shadow" >
+                <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
+                    <div class="row mb-3 ">
+                        <h5 for="inputEmail3" class="col-sm-2 col-form-label">Basic</h5>
+                        <div class="col-sm-10 " style="top:10px">
+                            <progress  max="100" value=<%= PreBasicPercent %>  class="html5 "></progress>
                         </div>
-                        <div class="row mb-3">
-                            <h5 for="inputEmail3" class="col-sm-2 col-form-label">Tracing</h5>
-                             <div class="col-sm-10 " style="top:10px">
-                              <progress  max="100" value=<%= TracePercent %>  class="html5 "></progress>
-                            </div>
-                        </div>
-                        <div class="row mb-3">
-                            <h5 for="inputEmail3" class="col-sm-2 col-form-label">Explaining</h5>
-                             <div class="col-sm-10 " style="top:10px">
-                              <progress  max="100" value=<%= ExplainPercent, %>   class="html5 "></progress>
-                            </div>
-                        </div>
-                        <div class="row mb-3">
-                            <h5 for="inputEmail3" class="col-sm-2 col-form-label">Writing</h5>
-                             <div class="col-sm-10 " style="top:10px">
-                              <progress  max="100" value=<%= WritePercent %>  class="html5 "></progress>
-                            </div>
-                        </div>
-                                            
                     </div>
+                    <div class="row mb-3">
+                        <h5 for="inputEmail3" class="col-sm-2 col-form-label">Tracing</h5>
+                         <div class="col-sm-10 " style="top:10px">
+                          <progress  max="100" value=<%= PreTracePercent %>  class="html5 "></progress>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <h5 for="inputEmail3" class="col-sm-2 col-form-label">Explaining</h5>
+                         <div class="col-sm-10 " style="top:10px">
+                          <progress  max="100" value=<%= PreExplainPercent, %>   class="html5 "></progress>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <h5 for="inputEmail3" class="col-sm-2 col-form-label">Writing</h5>
+                         <div class="col-sm-10 " style="top:10px">
+                          <progress  max="100" value=<%= PreWritePercent %>  class="html5 "></progress>
+                        </div>
+                    </div>
+                                        
                 </div>
             </div>
-        </div>
+        </div>  
+        
         <div>
             <h3>***</h3>   
             <div style="height: 400px;" class="">
