--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -176,7 +176,6 @@
             padding: 10px;
         }
         .progress {
-            background-color: #ffd6f1;
             width: 300px;
         }
         progress[value]::-webkit-progress-value {
@@ -187,8 +186,9 @@
         <div class="boxbax">
             <p>Progress</p>
             <div class="progress">
-                <progress class="progress bg-info" value="<%= TicketBooking_SystemPercent %>" max="100"></progress>
-            </div><p><%= TicketBooking_SystemPercent %>%</p>
+                <progress class="progress" value="<%= TicketBooking_SystemPercent %>" style="margin-right: 5px;" max="100"></progress>
+                <b><%= TicketBooking_SystemPercent %>%</b>
+            </div>
             
         </div>
         <div class="boxbax">
@@ -212,38 +212,35 @@
 
     <h1>Competency</h1>
     <div  class="group2">
-        <div id = "content" class="container">  
-            <div class="box bg-light  mb-5 shadow" >
+        <div>
+        <h3>***</h3> 
+        <div style="height: 400px;" class="">
+        <div class="chartCard">  
+            <div class="chartBox" >
                 <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
                     <div class="row mb-3 ">
-                        <h5 for="inputEmail3" class="col-sm-2 col-form-label">Basic</h5>
                         <div class="col-sm-10 " style="top:10px">
-                            <progress  max="100" value=<%= PreBasicPercent %>  </progress>
+                            <b style="font-size: 12px;">Basic: <%= PreBasicPercent %>%</b>
+                            <progress class="progress" max="100" value=<%= PreBasicPercent %>  </progress>
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <h5 for="inputEmail3" class="col-sm-2 col-form-label">Tracing</h5>
                          <div class="col-sm-10 " style="top:10px">
-                          <progress  max="100" value=<%= PreTracePercent %>  class="html5 "></progress>
+                            <b style="font-size: 12px;">Tracing: <%= PreTracePercent %>%</b>
+                          <progress class="progress" max="100" value=<%= PreTracePercent %>  class="html5 "></progress>
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <h5 for="inputEmail3" class="col-sm-2 col-form-label">Explaining</h5>
                          <div class="col-sm-10 " style="top:10px">
-                          <progress  max="100" value=<%= PreExplainPercent, %>   class="html5 "></progress>
+                            <b style="font-size: 12px;">Explaining: <%= PreExplainPercent, %>%</b>
+                          <progress class="progress" max="100" value=<%= PreExplainPercent, %>   class="html5 "></progress>
                         </div>
                     </div>
-                    <div class="row mb-3">
-                        <h5 for="inputEmail3" class="col-sm-2 col-form-label">Writing</h5>
-                         <div class="col-sm-10 " style="top:10px">
-                          <progress  max="100" value=<%= PreWritePercent %>  class="html5 "></progress>
-                        </div>
-                    </div>
-                                        
                 </div>
             </div>
         </div>  
-        
+        </div>
+        </div>
         <div>
             <h3>***</h3>   
             <div style="height: 400px;" class="">
