--- a/views/student/layouts/recommendation.ejs
+++ b/views/student/layouts/recommendation.ejs
@@ -38,7 +38,7 @@
                     <% }else if(RecommendaResult[0].RecommendCourse === "Selection Statements"){ %>
                         
                             <button onclick="window.location.href='/course-Selection_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
-                    <% }else if(RecommendaResult[0].RecommendCourse === "Loop Statement"){ %>
+                    <% }else if(RecommendaResult[0].RecommendCourse === "Loop Statements"){ %>
                         
                             <button onclick="window.location.href='/course-Loop_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
                   
