--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -181,6 +181,12 @@
         progress[value]::-webkit-progress-value {
             background-color: #ff4cbf;
         }
+        progress[value]::-webkit-progress-bar {
+            background-color: #ffdef3;
+        }
+        .b,.p {
+            color: #ffffff;
+        }
     </style>
     <div  class="group">
         <div class="boxbax">
@@ -214,31 +220,57 @@
     <div  class="group2">
         <div>
         <h3>***</h3> 
-        <div style="height: 400px;" class="">
-        <div class="chartCard">  
-            <div class="chartBox" >
-                <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
-                    <div class="row mb-3 ">
-                        <div class="col-sm-10 " style="top:10px">
-                            <b style="font-size: 12px;">Basic: <%= PreBasicPercent %>%</b>
-                            <progress class="progress" max="100" value=<%= PreBasicPercent %>  </progress>
+        <div>
+            <div class="p">  
+                <div class="" >
+                    <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
+                        <p>Pre-test</p>
+                        <div class="row mb-3 ">
+                            <div class="col-sm-10 " style="top:10px">
+                                <b style="font-size: 12px;">Basic: <%= PreBasicPercent %> /120</b>
+                                <progress class="progress" max="100" value=<%= PreBasicPercent %>  </progress>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row mb-3">
-                         <div class="col-sm-10 " style="top:10px">
-                            <b style="font-size: 12px;">Tracing: <%= PreTracePercent %>%</b>
-                          <progress class="progress" max="100" value=<%= PreTracePercent %>  class="html5 "></progress>
+                        <div class="row mb-3">
+                            <div class="col-sm-10 " style="top:10px">
+                                <b style="font-size: 12px;">Tracing: <%= PreTracePercent %> /120</b>
+                            <progress class="progress" max="100" value=<%= PreTracePercent %>  class="html5 "></progress>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row mb-3">
-                         <div class="col-sm-10 " style="top:10px">
-                            <b style="font-size: 12px;">Explaining: <%= PreExplainPercent, %>%</b>
-                          <progress class="progress" max="100" value=<%= PreExplainPercent, %>   class="html5 "></progress>
+                        <div class="row mb-3">
+                            <div class="col-sm-10 " style="top:10px">
+                                <b style="font-size: 12px;">Explaining: <%= PreExplainPercent %> /120</b>
+                            <progress class="progress" max="100" value=<%= PreExplainPercent, %>   class="html5 "></progress>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>  
+            </div>  <br>
+            <div class="p">  
+                <div class="" >
+                    <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
+                        <p>Post-test</p>
+                        <div class="row mb-3 ">
+                            <div class="col-sm-10 " style="top:10px">
+                                <b style="font-size: 12px;">Basic: <%= BasicPercent %> /120</b>
+                                <progress class="progress" max="100" value=<%= BasicPercent %>  </progress>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                             <div class="col-sm-10 " style="top:10px">
+                                <b style="font-size: 12px;">Tracing: <%= TracePercent %> /120</b>
+                              <progress class="progress" max="100" value=<%= TracePercent %>  class="html5 "></progress>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                             <div class="col-sm-10 " style="top:10px">
+                                <b style="font-size: 12px;">Explaining: <%= ExplainPercent %> /120</b>
+                              <progress class="progress" max="100" value=<%= ExplainPercent, %>   class="html5 "></progress>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>  
         </div>
         </div>
         <div>
