--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -67,8 +67,8 @@
             <thead><br>
                 <div class="item1" style="border-radius: 5px;">
                     <% if (Object.keys(result).length != 0) { %>
-                    <p>Course name : <%= result[0].ClassName %></p>  <!-- ***** -->
-                    <p>Class : <%= result[0].ClassName %> </p>
+                    <p>Course name : <%= result[0].Course %></p>  
+                    <p>Class : <%= result[0].Section %> </p>
                             <button type="button" class="btn btn-outline-dark btn-sm" data-bs-toggle="modal" data-bs-target="#Classjoin" style="background-color: #ffffff;">
                                 <svg width="17.5" height="20" style="font-size: 20px;;align-items: center;" viewBox="0 0 448 512">
                                 <path d="M432 256c0 17.69-14.33 32.01-32 32.01H256v144c0 17.69-14.33 31.99-32 31.99s-32-14.3-32-31.99v-144H48c-17.67 0-32-14.32-32-32.01s14.33-31.99 32-31.99H192v-144c0-17.69 14.33-32.01 32-32.01s32 14.32 32 32.01v144h144C417.7 224 432 238.3 432 256z"/>
