--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -172,11 +172,11 @@
             width: 450px; 
             height: 100px;
             border-radius: 5px;
-            background-color: #f1f1f1;
             padding: 10px;
         }
         .progress {
             width: 300px;
+            background-color: #b8ffc5;
         }
         progress[value]::-webkit-progress-value {
             background-color: #ff4cbf;
@@ -187,17 +187,21 @@
         .b,.p {
             color: #ffffff;
         }
+        @media (max-width: 1000px) {
+            .group {display: block;}
+        }
+
     </style>
-    <div  class="group">
+    <div class="group" style="background-color: #b8ffc5; border-radius: 5px;">
         <div class="boxbax">
             <p>Progress</p>
             <div class="progress">
-                <progress class="progress" value="<%= TicketBooking_SystemPercent %>" style="margin-right: 5px;" max="100"></progress>
+                <progress class="progress" value="50" style="margin-right: 5px;" max="100"></progress>
                 <b><%= TicketBooking_SystemPercent %>%</b>
             </div>
             
         </div>
-        <div class="boxbax">
+        <div class="boxbax" style="height: 220px;">
             <img style="width: 20px;" src="https://cdn-icons-png.flaticon.com/512/4213/4213459.png " alt="">
             <% if (TicketBooking_SystemPercent === 50) { %>
                 <b>Project Quiz 1 ปลดล็อกแล้ว!</b>
@@ -211,6 +215,9 @@
                 <b>Project Quiz 3 ปลดล็อกแล้ว!</b>
                 <p>คลิก<a href="/project"> Project </a>เพื่อดูเพิ่มเติม</p>
             <% }%>
+            <p>Project Quiz 1 : <%= PrjQuiz1 %></p>
+            <p>Project Quiz 1 : <%= PrjQuiz1 %></p>
+            <p>Project Quiz 1 : <%= PrjQuiz1 %></p>
         </div>
     </div>
 
@@ -227,20 +234,20 @@
                         <p>Pre-test</p>
                         <div class="row mb-3 ">
                             <div class="col-sm-10 " style="top:10px">
-                                <b style="font-size: 12px;">Basic: <%= PreBasicPercent %> /120</b>
-                                <progress class="progress" max="100" value=<%= PreBasicPercent %>  </progress>
+                                <b style="font-size: 12px;">Basic: <%= PreBasicPercent %> /40</b>
+                                <progress class="progress" max="40" value=<%= PreBasicPercent %>  </progress>
                             </div>
                         </div>
                         <div class="row mb-3">
                             <div class="col-sm-10 " style="top:10px">
-                                <b style="font-size: 12px;">Tracing: <%= PreTracePercent %> /120</b>
-                            <progress class="progress" max="100" value=<%= PreTracePercent %>  class="html5 "></progress>
+                                <b style="font-size: 12px;">Tracing: <%= PreTracePercent %> /40</b>
+                            <progress class="progress" max="40" value=<%= PreTracePercent %>  class="html5 "></progress>
                             </div>
                         </div>
                         <div class="row mb-3">
                             <div class="col-sm-10 " style="top:10px">
-                                <b style="font-size: 12px;">Explaining: <%= PreExplainPercent %> /120</b>
-                            <progress class="progress" max="100" value=<%= PreExplainPercent, %>   class="html5 "></progress>
+                                <b style="font-size: 12px;">Explaining: <%= PreExplainPercent %> /40</b>
+                            <progress class="progress" max="40" value=<%= PreExplainPercent, %>   class="html5 "></progress>
                             </div>
                         </div>
                     </div>
