--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -15,7 +15,9 @@
     height: 140px;
     background-color: #ffffff;
     padding: 10px;
-    width: auto; 
+    width: 400px; 
+    border-radius: 5px;
+    margin-bottom: 10px;
 }
 .item2 {
 
