--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -58,7 +58,7 @@
         <% } %>
     </ul>
     <ul class="navbar-nav mb-0 ms-auto">
-      <li class="nav-item "><a class="nav-link" href="/course" style="color: #ffffff;"></a></li>
+      <li class="nav-item nav-link" style="color: #ffffff;" ><%= person.name %></li>
       <li class="nav-item "><a class="nav-link"  href="/auth/logout" style="color: #ffffff;"><i class="fa fa-power-off" style="font-size: 25px;;align-items: center; " ></i></a></li>     
     </ul>
   </div>
