--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -20,14 +20,12 @@
     margin-bottom: 10px;
 }
 .item2 {
-
     height: 160px;
     background-color: #E2D9E5;
     padding: 10px;
     width: auto;
 }
 .content3 {
-
     width: 100%;
     padding: 10px;
     margin-top: 30px;
@@ -111,4 +109,48 @@ button.btn-secondary {
     width: 300px;
     background-color: aquamarine;
     border-radius: 5px;
+}
+
+
+.boxbax {
+    width: 400px; 
+    height: auto;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: #ffffff;
+    margin-bottom: 10px;
+}
+.boxbax2 {
+    width: 400px; 
+    height: auto;
+    color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+.boxbax3 {
+    width: 300px; 
+    height: auto;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: #ffffff;
+    margin-bottom: 10px;
+}
+.progress {
+    width: 300px;
+    background-color: #b8ffc5;
+}
+progress[value]::-webkit-progress-value {
+    background-color: #ff4cbf;
+}
+progress[value]::-webkit-progress-bar {
+    background-color: #ffdef3;
+}
+@media (max-width: 1000px) {
+    .group, .group2 {display: block;}
+    .boxbax, .item1 {width: auto; }
+}
+@media (max-width: 1500px) {
+    .group2 {display: block;}
+    html {height: fit-content;}
 }
